# lab-6-2004

./: README.md  app.py  config.py  data.py  models.py  pyproject.toml  students.db
tests/: tests_api.py
