[project]
name = "lab-6-2004"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=8.3.5",
    "pandas>=2.2.3",
    "faker>=37.1.0",
]
